Remove some wrong stack depth calculation. Fixes the following bug, together with the last commit. (at last!)

BUG: 241047

svn path=/trunk/KDE/kdeedu/kalgebra/; revision=1206274